# R-MAVLink

./: .gitignore  LICENSE  Makefile  README.md  main.cpp
R-MAVLink/: CMakeLists.txt  README.md
R-MAVLink/docs/: results.md
R-MAVLink/include/: packet_manager.h
R-MAVLink/mavlink/: mavlink_parser.cpp
core/: packet_manager.cpp  reliable_protocol.cpp
docs/: architecture.md
include/: crc_utils.h  reliable_protocol.h
tests/: packet_loss_sim.cpp
transport/: uart.cpp  udp.cpp
